# koreader

./: .gitmodules  .luacheckrc  Makefile  datastorage.lua  kodev  luajit_no_dlclose.patch  meson.build  meson_options.txt  setupkoenv.lua
.ci/: after_success.sh  build.jobs.yml  build.prepare.sh  build.release.sh  check.sh  helper_shellchecks.sh  release.sh  test.sh
.circleci/: config.yml
.github/workflows/: build.jobs  build.lint.yml  build.matrix.yml  build.release.yml  build.yml  build_matrix.yml  ci.yml
base/: Makefile  Makefile.defs  README.md  cache-key.base  cre.cpp  fix_install.py  libkoreader.gen_link_files.sh  libkoreader.lua.meson  libkoreader.meson.lua
base/cmake/: CMakeLists.txt
base/ffi/: SDL2_0.lua  SDL3_h.lua  blitbuffer.lua  crypto.lua  freetype.lua  input.lua  jpeg.lua  koptcontext.lua  kotasync.lua  leptonica_h.lua  libspng_h.lua  loadlib.lua  mupdf.lua  mupdf_h.lua  png.lua  posix.lua  pthread_h_android_32.lua  pthread_h_android_64.lua  pthread_h_linux_32.lua  pthread_h_linux_64.lua  pthread_h_macos_64.lua  rtc_h.lua  utf8proc.lua  util.lua  xz_h.lua  zlib_h.lua  zstd.lua  zsync.lua  zsync_h.lua
base/ffi-cdecl/: SDL3_decl.c  blitbuffer_cdecl.c  fbink_input_cdecl.c  libspng_cdecl.c  pthread_cdecl.c  xxhash_cdecl.c  zlib_decl.c  zsync_cdecl.c
base/kotasync/: Makefile
base/toolchain/: Makefile
base/utils/: bincheck.py  bindiff.py  bininfo.py  ds.py  gains.sh
doc/: Building.md  Building_targets.md
frontend/document/: credocument.lua  document.lua  koptinterface.lua  pdfdocument.lua
frontend/ui/: otamanager.lua  uimanager.lua
make/: android-x86_64.mk  android.mk  appimage.mk  cervantes.mk  ci.mk  emulator.mk  emulator_linux.mk  emulator_tests.mk  kindle.mk  kobo.mk  linux.mk  macos.mk  pocketbook.mk  remarkable.mk  sony-prstux.mk  ubuntu-touch.mk
meson/: cross_android-arm.ini  cross_android-arm64.ini  cross_android-x86.ini  cross_android-x86_64.ini  cross_android.ini  cross_kindlepw2.ini  cross_kobo.ini  cross_remarkable.ini  native.ini  native_android.ini  native_emulator-macos.ini  options.ini  target_android-.ini  target_android-arm.ini  target_emulator-.ini  target_emulator-linux-x86_64.ini  target_kindlepw2.ini  target_kobo.ini  target_remarkable.ini
meson/tools/: rockspec2meson  subproject-patches
platform/android/: llapp_main.lua
platform/cervantes/: koreader.sh
platform/common/: pvink
platform/kindle/: koreader.sh
platform/kobo/: koreader.sh
platform/mac/: do_mac_bundle.sh
platform/pocketbook/: koreader.app
platform/remarkable/: koreader.sh
plugins/coverbrowser.koplugin/: bookinfomanager.lua  covermenu.lua  listmenu.lua  main.lua  mosaicmenu.lua
plugins/externalkeyboard.koplugin/: main.lua
spec/unit/: benchmark.lua  commonrequire.lua  docsettings_spec.lua  filemanager_spec.lua  persist_spec.lua  (+5 more)
subprojects/: 7z.wrap  args.wrap  ca-certificates.wrap  cpr.wrap  curl.wrap  czmq.wrap  djvulibre.wrap  dropbear.wrap  fbink.wrap  freetype2.wrap  fribidi.wrap  gcc-lua-cdecl.wrap  gcc-lua.wrap  giflib.wrap  glib.wrap  gumbo-parser.wrap  gvdb.wrap  harfbuzz.wrap  jbig2dec.wrap  k2pdfopt.wrap  kobo-usbms.wrap  koreader-lfs.wrap  lcms2mt.wrap  leptonica.wrap  libaes.wrap  libarchive.wrap  libevdev.wrap  libjpeg-turbo.wrap  libk2pdfopt.wrap  libopenjp2.wrap  libpng.wrap  libunibreak.wrap  libwebp.wrap  libzmq.wrap  lodepng.wrap  lua-argparse.wrap  lua-busted.wrap  lua-dkjson.wrap  lua-htmlparser.wrap  lua-lj-wpaclient.wrap  (+40 more)
subprojects/crengine/: .gitignore  meson.build  meson_options.txt
subprojects/crengine/crengine/include/: cri18n.h  crlocks.h  crsetup.h.meson  epubfmt.h  lvdocview.h  lvimg.h  lvmemman.h  lvref.h  lvrefcache.h  lvstring.h  lvtextfm.h  lvtinydom.h  meson.build
subprojects/crengine/crengine/qimagescale/: meson.build
subprojects/crengine/crengine/src/: chmfmt.cpp  cp_stats.cpp  crtxtenc.cpp  docxfmt.cpp  epubfmt.cpp  hyphman.cpp  lstridmap.cpp  lvdocview.cpp  lvdrawbuf.cpp  lvfntman.cpp  lvimg.cpp  lvpagesplitter.cpp  lvrend.cpp  lvstream.cpp  lvstring.cpp  lvstsheet.cpp  lvtextfm.cpp  lvtinydom.cpp  lvxml.cpp  mathml.cpp  meson.build  wordfmt.cpp
subprojects/koreader-runtests/: busted_config.lua  meson.build  runner_meson.build  runtests
subprojects/koreader-runtests/runner/: meson.build
subprojects/packagefiles/cpr/overlay/: meson.build
subprojects/packagefiles/dropbear/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/dropbear/overlay/libtomcrypt/src/: meson.build
subprojects/packagefiles/dropbear/overlay/libtommath/: meson.build
subprojects/packagefiles/dropbear/overlay/src/: meson.build
subprojects/packagefiles/fbink/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/gcc-lua-cdecl/overlay/: ffi-cdecl.lua  ffi-cdecl.meson.sh  meson.build
subprojects/packagefiles/gcc-lua-cdecl/overlay/test/: meson.build
subprojects/packagefiles/gcc-lua/overlay/: meson.build
subprojects/packagefiles/gcc-lua/overlay/test/: meson.build
subprojects/packagefiles/k2pdfopt/overlay/: koptcrop.c  koptocr.c  meson.build  willus_config.h.meson
subprojects/packagefiles/kobo-usbms/overlay/: kobo-usbms-tgz.py  meson.build
subprojects/packagefiles/koreader-lfs/overlay/: meson.build
subprojects/packagefiles/libk2pdfopt/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/lua-argparse/overlay/: meson.build
subprojects/packagefiles/lua-dkjson/overlay/: meson.build
subprojects/packagefiles/lua-lj-wpaclient/overlay/: meson.build
subprojects/packagefiles/lua-lpeg/overlay/: meson.build
subprojects/packagefiles/lua-rapidjson/overlay/: meson.build
subprojects/packagefiles/lua-say/overlay/: meson.build
subprojects/packagefiles/lua-spore/overlay/: meson.build
subprojects/packagefiles/lua-term/overlay/: meson.build
subprojects/packagefiles/lua-turbo/overlay/: meson.build
subprojects/packagefiles/lua_cliargs/overlay/: meson.build
subprojects/packagefiles/luacov/overlay/: meson.build
subprojects/packagefiles/luafilesystem/overlay/: meson.build
tools/: merge_luacov_stats.lua  mkarchive.sh  mkrelease.sh  shell.nix  wbuilder.lua
(+198 files in other folders)
