option('blitbuffer'          , type: 'boolean', value: false)
option('ffi-cdecl'           , type: 'feature', value: 'auto')
option('install_symlinks'    , type: 'boolean', value: false)
option('koreader_input'      , type: 'boolean', value: false)
option('launcher'            , type: 'combo'  , choices: ['default', 'luajit-launcher', 'macos', 'remarkable'])
option('platform_executables', type: 'array')
option('sdl'                 , type: 'boolean', value: false)
option('static_if_amalgam'   , type: 'combo'  , choices: ['shared' , 'static'])
option('subprojects'         , type: 'array')
option('target'              , type: 'combo', choices: ['Emulator', 'Kindle', 'Kobo', 'reMarkable'], description: 'Target platform.', yield: true)
option('tests'               , type: 'boolean', value: false)
# Required for a fully functional build, but can be
# disabled to speed-up the development cycle, e.g.
# when running a subset of the testsuite.
option('crengine'      , type: 'boolean', value: true)
option('djvulibre'     , type: 'boolean', value: true)
option('freetype'      , type: 'boolean', value: true)
option('fribidi'       , type: 'boolean', value: true)
option('giflib'        , type: 'boolean', value: true)
option('harfbuzz'      , type: 'boolean', value: true)
option('k2pdfopt'      , type: 'boolean', value: true)
option('leptonica'     , type: 'boolean', value: true)
option('lodepng'       , type: 'boolean', value: true)
option('lua-htmlparser', type: 'boolean', value: true)
option('lua-rapidjson' , type: 'boolean', value: true)
option('lua-spore'     , type: 'boolean', value: true)
option('lua-turbo'     , type: 'boolean', value: true)
option('luajson'       , type: 'boolean', value: true)
option('luasec'        , type: 'boolean', value: true)
option('luasocket'     , type: 'boolean', value: true)
option('mupdf'         , type: 'boolean', value: true)
option('nanosvg'       , type: 'boolean', value: true)
option('sqlite3'       , type: 'boolean', value: true)
option('turbojpeg'     , type: 'boolean', value: true)
option('unibreak'      , type: 'boolean', value: true)
option('utf8proc'      , type: 'boolean', value: true)
option('webp'          , type: 'boolean', value: true)
option('zeromq'        , type: 'boolean', value: true)
