option('blitbuffer'          , type: 'boolean', value: false)
option('ffi-cdecl'           , type: 'feature')
option('install_symlinks'    , type: 'boolean', value: false)
option('koreader_input'      , type: 'boolean', value: false)
option('launcher'            , type: 'combo'  , choices: ['default', 'luajit-launcher', 'macos', 'remarkable'])
option('luajit_mode'         , type: 'combo'  , choices: ['shared', 'static'])
option('platform_executables', type: 'array')
option('sdl'                 , type: 'boolean', value: false)
option('static_if_amalgam'   , type: 'combo'  , choices: ['shared' , 'static'])
option('subprojects'         , type: 'array')
option('target'              , type: 'combo', choices: ['Linux', 'Kindle', 'reMarkable'])
option('tests'               , type: 'boolean', value: false)
# Required for a fully functional build, but can be
# disabled to speed-up the development cycle, e.g.
# when running a subset of the testsuite.
option('crengine'      , type: 'boolean')
option('djvulibre'     , type: 'boolean')
option('freetype'      , type: 'boolean')
option('fribidi'       , type: 'boolean')
option('giflib'        , type: 'boolean')
option('harfbuzz'      , type: 'boolean')
option('k2pdfopt'      , type: 'boolean')
option('leptonica'     , type: 'boolean')
option('lodepng'       , type: 'boolean')
option('lua-htmlparser', type: 'boolean')
option('lua-lunajson'  , type: 'boolean')
option('lua-rapidjson' , type: 'boolean')
option('lua-spore'     , type: 'boolean')
option('lua-turbo'     , type: 'boolean')
option('luajson'       , type: 'boolean')
option('luasec'        , type: 'boolean')
option('luasocket'     , type: 'boolean')
option('mupdf'         , type: 'boolean')
option('nanosvg'       , type: 'boolean')
option('sqlite3'       , type: 'boolean')
option('turbojpeg'     , type: 'boolean')
option('unibreak'      , type: 'boolean')
option('utf8proc'      , type: 'boolean')
option('webp'          , type: 'boolean')
option('zeromq'        , type: 'boolean')
