option('install_symlinks', type: 'boolean', value: false, yield: true)

option('antiword'   , type: 'feature')
option('chmlib'     , type: 'feature')
option('freetype'   , type: 'feature')
option('fribidi'    , type: 'feature')
option('gif'        , type: 'feature')
option('harfbuzz'   , type: 'feature')
option('jpeg'       , type: 'feature')
option('libunibreak', type: 'feature')
option('lunasvg'    , type: 'feature')
option('nanosvg'    , type: 'feature')
option('png'        , type: 'feature')
option('mathml'     , type: 'feature')
option('srell_regex', type: 'feature')
option('utf8proc'   , type: 'feature')
option('webp'       , type: 'feature')
option('zlib'       , type: 'feature')
option('zstd'       , type: 'feature')

option('sysmalloc', type: 'boolean', value: false)
