crengine_sources = files(
  '../qimagescale/qimagescale.cpp',
  'chmfmt.cpp',
  'cp_stats.cpp',
  'crconcurrent.cpp',
  'cri18n.cpp',
  'crtxtenc.cpp',
  'docxfmt.cpp',
  'epubfmt.cpp',
  'fb3fmt.cpp',
  'hist.cpp',
  'hyphman.cpp',
  'lstridmap.cpp',
  'lvdocview.cpp',
  'lvdrawbuf.cpp',
  'lvfntman.cpp',
  'lvimg.cpp',
  'lvmemman.cpp',
  'lvopc.cpp',
  'lvpagesplitter.cpp',
  'lvrend.cpp',
  'lvstream.cpp',
  'lvstring.cpp',
  'lvstsheet.cpp',
  'lvstyles.cpp',
  'lvtextfm.cpp',
  'lvtinydom.cpp',
  'lvxml.cpp',
  'mathml.cpp',
  'odtfmt.cpp',
  'odxutil.cpp',
  'pdbfmt.cpp',
  'props.cpp',
  'rtfimp.cpp',
  'textlang.cpp',
  'wordfmt.cpp',
)
