crengine_lib = library(
  'crengine',
  [
    crsetup_h,
    'chmfmt.cpp',
    'cp_stats.cpp',
    'cri18n.cpp',
    'crtxtenc.cpp',
    'docxfmt.cpp',
    'epubfmt.cpp',
    'fb3fmt.cpp',
    'hist.cpp',
    'hyphman.cpp',
    'lstridmap.cpp',
    'lvdocview.cpp',
    'lvdrawbuf.cpp',
    'lvfntman.cpp',
    'lvimg.cpp',
    'lvmemman.cpp',
    'lvopc.cpp',
    'lvpagesplitter.cpp',
    'lvrend.cpp',
    'lvstream.cpp',
    'lvstring.cpp',
    'lvstsheet.cpp',
    'lvstyles.cpp',
    'lvtextfm.cpp',
    'lvtinydom.cpp',
    'lvxml.cpp',
    'mathml.cpp',
    'odtfmt.cpp',
    'odxutil.cpp',
    'pdbfmt.cpp',
    'props.cpp',
    'rtfimp.cpp',
    'textlang.cpp',
    'wordfmt.cpp',
  ],
  dependencies: [
    antiword_dep,
    chmlib_dep,
    freetype_dep,
    fribidi_dep,
    harfbuzz_dep,
    jpeg_dep,
    lunasvg_dep,
    nanosvg_dep,
    png_dep,
    srell_dep,
    unibreak_dep,
    utf8proc_dep,
    webp_dep,
    zlib_dep,
    zstd_dep,
  ],
  gnu_symbol_visibility: 'inlineshidden',
  include_directories: crengine_includes,
  install: true,
  link_with: qimagescale_lib,
)

crengine_dep = declare_dependency(
  link_with: crengine_lib,
  include_directories: crengine_includes,
  dependencies: [
    # Some public headers include harfbuzz and/or unibreak headers.
    harfbuzz_dep.partial_dependency(compile_args: true, includes: true),
    unibreak_dep.partial_dependency(compile_args: true, includes: true),
  ],
  sources: crsetup_h,
)

meson.override_dependency('crengine', crengine_dep)
